Fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overflow-y: hidden;
 }
 
 html {
@@ -14,6 +15,7 @@ html {
 body {
   height: 100%;
   overflow: auto;
+  overflow-y: hidden;
 }
 
 a {
